fix header alignment with grid

--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -15,7 +15,7 @@ $ns: '.header';
     align-items: flex-end;
     justify-content: flex-start;
     @include breakpoint(md) {
-      width: 1000px;
+      width: 960px;
     }
   }
 
@@ -99,7 +99,6 @@ $ns: '.header';
   &__buttons {
     background-color: #464646;
     margin-left: auto;
-    margin-right: 20px;
     display: none;
     @include breakpoint(md) {
       display: flex;
